--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
 
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
